UI Changes PDTL

--- a/PDTL.html
+++ b/PDTL.html
@@ -50,12 +50,12 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
 
-    </div>
+    </div> -->
 
     <div class="site-header">
         <div class="header-wrapper">
@@ -289,6 +289,8 @@
                         </div>
 
                     </div>
+
+
                     <div id="poster" class="blocco" style="line-height: 0px; background-color: #fff;">
                         <div class="left_block margin__bottom grid_intern" data-scroll>
                             <figure>
@@ -297,6 +299,8 @@
                         </div>
                     </div>
                 </div>
+
+
                 <div id="portf" class="grid_intern" style="background-color: #fff;">
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
@@ -317,13 +321,21 @@
 
                 </div>
                 <div id="poster" class="blocco pdtl__pd-bottom">
-                    <div class="left_block margin__bottom grid_intern" style="text-align: center; padding-bottom: 60px;"
-                        data-scroll>
+                    <div class="left_block margin__bottom grid_intern pdtl__pb" data-scroll>
                         <figure>
                             <img alt="" src=" /assets/resources/img/PDTL/palette.png" class="ptdl__img_palette">
                         </figure>
                     </div>
                 </div>
+
+                <div id="poster" class="blocco pdtl__pd-bottom">
+                    <div class="left_block margin__bottom grid_intern pdtl__pb_mobile" data-scroll>
+                        <figure>
+                            <img alt="" src="/assets/resources/img/PDTL/palette_mobile.png" class="ptdl__img_mobile">
+                        </figure>
+                    </div>
+                </div>
+
 
                 <div id="poster" class="blocco pdtl__line-height">
                     <div class="left_block margin__bottom grid_intern" data-scroll>
