--- a/PDTL.html
+++ b/PDTL.html
@@ -320,7 +320,7 @@
                     </div>
 
                 </div>
-                <div id="poster" class="blocco pdtl__pd-bottom">
+                <div id="poster" class="blocco">
                     <div class="left_block margin__bottom grid_intern pdtl__pb" data-scroll>
                         <figure>
                             <img alt="" src=" /assets/resources/img/PDTL/palette.png" class="ptdl__img_palette">
@@ -328,7 +328,7 @@
                     </div>
                 </div>
 
-                <div id="poster" class="blocco pdtl__pd-bottom">
+                <div id="poster" class="blocco">
                     <div class="left_block margin__bottom grid_intern pdtl__pb_mobile" data-scroll>
                         <figure>
                             <img alt="" src="/assets/resources/img/PDTL/palette_mobile.png" class="ptdl__img_mobile">
