code footer update

--- a/contact.html
+++ b/contact.html
@@ -431,7 +431,7 @@ requirements."/>
 
    <script src="/assets/vendors/lib/plugins.js"></script>
    <script src="/assets/resources/js/pages-js/preloader.js"></script>
-   <script src="./assets/resources/js/cursor.js"></script>
+   <script rel="preload" as="script" src="https://weareenigma.com/assets/resources/js/cursor.min.js"></script>
    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
