--- a/services.html
+++ b/services.html
@@ -471,7 +471,7 @@ etc" />
                     </a>
                 </div>
                 <!-- footer -->
-                <footer id="footer" class="dark-footer">
+                <footer id="footer">
                     <div class="f-container">
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                             <h3>Let’s Build Something </h3>
@@ -486,19 +486,25 @@ etc" />
                         </div>
                         <div class="footer-flex">
                             <div class="footer-right">
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span
-                                        class="cb-outro-social-item-title"><span data-text="Work">Work</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href=""><span
-                                        class="cb-outro-social-item-title"><span
-                                            data-text="Career">Career</span></span></a>
-                                <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span
-                                        class="cb-outro-social-item-title"><span data-text="Blog">Blog</span></span></a>
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
+                                <a class="cb-outro-social-item" data-cursor="-opaque" href="services.html"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Expertises">Expertises</span></span></a>
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span
                                         class="cb-outro-social-item-title"><span
-                                            data-text="Portfolio">Portfolio</span></span></a>
+                                            data-text="Works">Works</span></span></a>
+                                <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Insights">Insights</span></span></a>
+
+                                <a class="cb-outro-social-item" data-cursor="-opaque"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Career">Career</span></span></a>
+                                <a class="cb-outro-social-item" data-cursor="-opaque" href="contact.html"><span
+                                        class="cb-outro-social-item-title"><span
+                                            data-text="Contact">Contact</span></span></a>
                             </div>
                             <div class="footer-left">
                                 <div class="botom">
@@ -514,7 +520,7 @@ etc" />
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="Instagramlogo.json"
+                                                    <lottie-player class="so" src="Instagram-logo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -539,7 +545,7 @@ etc" />
                                         <li>
                                             <a href="https://www.behance.net/enigma-digital" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="behance-w.json"
+                                                    <lottie-player class="so" src="behance.json"
                                                         background="transparent" speed="1"
                                                         style="width: 26px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -572,7 +578,7 @@ etc" />
 
     <script src="/assets/vendors/lib/plugins.js"></script>
     <script src="/assets/resources/js/pages-js/preloader.js"></script>
-    <script src="./assets/resources/js/cursor.js"></script>
+    <script src="/assets/resources/js/cursor.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
