--- a/works.html
+++ b/works.html
@@ -321,10 +321,7 @@ brand partners for the past four years, helping them to achieve the desired resu
                 </div>
                 <!-- Section Mobile -->
                 <div class="top-p">
-                    The perfect balance of passion,
-                    <br>  inspiration, commitment & meticulous 
-                    <br>artisanship to build digital products
-                    <br> that deliver results and help <br>businesses grow globally.
+                    The perfect balance of passion, inspiration, commitment & meticulous artisanship to build digital products that deliver results and help businesses grow globally.
                 </div>
                 <section class="section-container mob-port w-hde" style="background: #000;
                  padding-top: 20%;">
