Tablet Responsive Size Update

--- a/strategy.html
+++ b/strategy.html
@@ -206,7 +206,7 @@ business goals." />
                         <h1 class="text-rveal"><span class="header_title_line"><span>
                                     Strategy &
                                 </span></span>
-                            <span class="h1-r header_title_line"><span>
+                            <span class="h1-r header_title_line mr__right"><span>
                                     Planning
                                 </span>
                         </h1>
@@ -476,7 +476,7 @@ business goals." />
                                         Brand & content strategy
                                     </span></li>
                                 <li><span>
-                                        Persona design & customer segmentation
+                                        Personal design & customer segmentation
                                     </span></li>
                                 <li><span>
                                         Customer Experience Strategy
@@ -492,9 +492,9 @@ business goals." />
                                         Digital Marketing and Website
                                         Performance Audit
                                     </span></li>
-                                <li><span>
+                                <!-- <li><span>
                                         User Experience Development
-                                    </span></li>
+                                    </span></li> -->
                             </ul>
                         </div>
                     </div>
