--- a/technology-development.html
+++ b/technology-development.html
@@ -393,7 +393,7 @@ applications." />
                                 <li>Wireframing & Prototyping</li>
                                 <li>Responsive Web Design</li>
                                 <li>Illustrations & Animations</li>
-                                <li>Responsive Web Design</li>
+                                <!-- <li>Responsive Web Design</li> -->
                                 <li>Visual Designs, and</li>
                                 <li>Design Systems Creation</li>
                                 <li>UI Kits</li>
