Tablet Size Responsive Update

--- a/interface-design.html
+++ b/interface-design.html
@@ -440,6 +440,105 @@
                     </div>
                 </section>
 
+                <!-- ============================= Ipad Mobile ============================= -->
+
+                <section class="ser-two ipad-ser" data-bgcolor="#000" data-humcolor="#fff">
+                    <div class="s" data-scroll="">
+                        <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
+                            data-scroll-speed="8 ">
+                        <div class="text_anim spline_p bo-h">
+                            <p class="bo-h text_anim">
+
+                                The effectiveness of our design is the result of a proprietary approach that we have
+                                developed in-house. For every design we produce, we follow a combination of multiple
+                                steps, including:
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="horizontal-sec  ">
+                        <div class="item opacity-0 strategy__item" data-scroll="" data-scroll-speed="9" data-text="01">
+                            <h2>
+                                <span>RESEARCH</span>
+                            </h2>
+                            <p>
+                                <span>(Building the understanding of your business as our own) - We begin at the most
+                                    fundamental level. We conduct thorough research to gather information about your
+                                    industry, your company and its products and services. We want to know everything
+                                    that matters - your company’s vision, the product, its purpose, its U.S.P.s, your
+                                    target audience and the business expectations.</span>
+                            </p>
+                        </div>
+                        <div class="item mar-top opacity-0  strategy__item" data-scroll="" data-scroll-speed="9"
+                            data-text="02">
+                            <h2>
+                                <span>DISCOVERY</span>
+                            </h2>
+                            <p>
+                                <span>(Understanding the goals & challenges) - We then sit with you for an extensive
+                                    discovery session to understand your business goals, challenges and pain points
+                                    you’re trying to solve through design. We’ll also look at the data that tells us
+                                    which parts of your current interface are working and which are not. This will help
+                                    us create a plan of action tailored to your needs.</span>
+                            </p>
+                        </div>
+                        <div class="item opacity-0 strategy__item" data-scroll="" data-scroll-speed="9" data-text="03">
+                            <h2>
+                                <span>Storyboards</span>
+                            </h2>
+                            <p>
+                                <span>
+                                    (Customer Journey Mapping) - We develop ideas based on our findings in the research
+                                    &
+                                    discovery phase. We identify the core functionality of your product, define use
+                                    cases and build storyboards for each use case.
+                                </span>
+                            </p>
+                        </div>
+                        <div class="item mar-top opacity-0 strategy__item" data-scroll="" data-scroll-speed="9"
+                            data-text="04">
+                            <h2>
+                                <span>Wire-framing & Prototyping</span>
+                            </h2>
+                            <p>
+                                <span>(Designing the Interface) - We present design strategies that include various
+                                    colour
+                                    schemes, style tiles, collections of typography, navigation structure, & call to
+                                    actions that convey your brand identity and message to your target audience.</span>
+                            </p>
+                        </div>
+                        <div class="item opacity-0 strategy__item" data-scroll="" data-scroll-speed="9" data-text="05">
+                            <h2>
+                                <span>TVisual/U.I. Design</span>
+                            </h2>
+                            <p>We map your audience’s online behaviour and digital touchpoints to define the
+                                consumer journey.</p>
+                        </div>
+                        <div class="item mar-top item opacity-0 strategy__item" data-scroll="" data-scroll-speed="9"
+                            data-text="06">
+                            <h2>
+                                <span>Refinement</span>
+                            </h2>
+                            <p><span>
+                                    (Usability Testing & User Feedback) - We conduct user-testing sessions and perform a
+                                    detailed analysis on the pre-established KPIs to understand the areas of improvement
+                                    and the aberration from the desirable effect on the target audience. We then analyse
+                                    all the collected data and synthesise our findings into actionable design
+                                    improvements to further enhance your product.
+                                </span></p>
+                        </div>
+                    </div>
+                    <div class="container " data-scroll="">
+                        <div class="text_anim spline_p bo-h over" style="margin-top: -5%;">
+                            <p class="bo-h text_anim over" style="margin-top: -5%;">
+                                The effectiveness of our design is the result of a proprietary approach that we have
+                                developed in-house. For every design we produce, we follow a combination of multiple
+                                steps, including:
+                            </p>
+                        </div>
+                    </div>
+                </section>
+
                 <!-- Services-points -->
                 <section class="service-points" data-scroll="" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="container text_anim padding__bot">
