--- a/strategy.html
+++ b/strategy.html
@@ -450,6 +450,96 @@ business goals." />
                         </div>
                     </div>
                 </section>
+
+
+                <!-- ========================= Ipad Mobile ================== -->
+
+
+                <section class="ser-two ipad-ser" data-bgcolor="#000" data-humcolor="#fff">
+                    <div class="s" data-scroll="">
+                        <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
+                            data-scroll-speed="8 ">
+                        <div class="text_anim spline_p bo-h">
+                            <p class="bo-h text_anim">
+
+                                So we made our own unique process to provide sound strategies and digital solutions
+                                that
+                                help our clients respond to the changing customer, technology and competitor
+                                landscape
+                                and achieve measurable outcomes for their business.
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="horizontal-sec">
+                        <div class="item strategy__item opacity-0" data-scroll="" data-scroll-speed="9" data-text="01">
+                            <h2>
+                                <span>GATHERING INSIGHTS</span>
+                            </h2>
+                            <p>As strategic thinkers, every one of our engagements starts with a review of known
+                                challenges and an assessment of which outcomes will define success. This phase
+                                aligns the stakeholders and clarifies the central problem to be solved.</p>
+                        </div>
+                        <div class="item strategy__item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-text="02">
+                            <h2>
+                                <span>AUDIENCE MAPPING</span>
+                            </h2>
+                            <p>We combine your audience data with our own online audience insights to help you
+                                better understand our audience’s thoughts, feelings and behaviours to reach the
+                                right audiences.</p>
+                        </div>
+                        <div class="item strategy__item opacity-0" data-scroll="" data-scroll-speed="9" data-text="03">
+                            <h2>
+                                <span>Competition Mapping</span>
+                            </h2>
+                            <p>We thoroughly analyse market trends and competitor performance to identify where
+                                market opportunities exist within your business sector and how to best
+                                capitalise on them.</p>
+                        </div>
+                        <div class="item strategy__item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-text="04">
+                            <h2>
+                                <span>Brand Position Mapping</span>
+                            </h2>
+                            <p>We collaborate with you to develop a new brand positioning, proposition or
+                                refresh an existing one.</p>
+                        </div>
+                        <div class="item strategy__item opacity-0" data-scroll="" data-scroll-speed="9" data-text="05">
+                            <h2>
+                                <span>Journey Mapping</span>
+                            </h2>
+                            <p>We map your audience’s online behaviour and digital touchpoints to define the
+                                consumer journey.</p>
+                        </div>
+                        <div class="item strategy__item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-text="06">
+                            <h2>
+                                <span>Roadmap & Integration</span>
+                            </h2>
+                            <p>We’ll work with you to implement the right integrated strategy by integrating the
+                                insights we’ve gathered in previous steps to create a comprehensive roadmap that
+                                is not just channel-specific.</p>
+                        </div>
+                        <div class="item strategy__item opacity-0" data-scroll="" data-scroll-speed="9" data-text="07">
+                            <h2>
+                                <span>Implementation & Improvisation</span>
+                            </h2>
+                            <p>All set? Time to test the waters and improve on any gaps along the way to
+                                accomplish each and every goal.</p>
+                        </div>
+                    </div>
+                    <div class="container E-second" data-scroll>
+                        <div class="text_anim spline_p bo-h over" style="margin-top: -5%;">
+                            <p class="bo-h text_anim over" style="margin-top: -5%;">
+                                With extensive research, meticulous planning & a detailed understanding of your
+                                product/services and your business goals, we create the perfect strategy that builds
+                                meaningful online experiences across multiple channels that help your customers quickly
+                                find what they’re looking for, resulting in business success for you
+                            </p>
+                        </div>
+                    </div>
+                </section>
                 <!-- Services-points -->
                 <section class="service-points" data-scroll="" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="container text_anim">
