--- a/technology-development.html
+++ b/technology-development.html
@@ -372,6 +372,69 @@ applications." />
                         </div>
                     </div>
                 </section>
+
+                <!-- ================= Ipad Mobile =============== -->
+
+                <section class="ser-two ipad-ser" data-bgcolor="#000" data-humcolor="#fff">
+                    <div class="container" data-scroll="">
+                        <div class="s" data-scroll="">
+                            <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
+                                data-scroll-speed="8 ">
+                            <div class="text_anim spline_p bo-h">
+                                <p class="bo-h text_anim">
+                                    We are passionate about delivering a great user experience and helping our customers
+                                    succeed in their markets. Our expertise lies in designing and developing complex
+                                    business apps, e-commerce portals, social media platforms and mobile applications.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="horizontal-sec">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9" data-text="01">
+                            <h2>
+                                <span>FRONT-END DEVELOPMENT</span>
+                            </h2>
+                            <p>HTML, CSS, JavaScript, jQuery, Angular, React, Vue, GSAP</p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9" data-text="02">
+                            <h2>
+                                <span>NATIVE & PROGRESSIVE WEB APPLICATIONS</span>
+                            </h2>
+                            <p>Grails, Node, Java, Spring, Hibernate, Ruby, Apache Maven</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9" data-text="03">
+                            <h2>
+                                <span>DATABASE</span>
+                            </h2>
+                            <p>MySQL, PostgreSQL, Oracle, Mongo, Couch, Cassandra, HBase</p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9" data-text="04">
+                            <h2>
+                                <span>MOBILE APPLICATIONS</span>
+                            </h2>
+                            <p>iOS, Android</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9" data-text="05">
+                            <h2>
+                                <span>INFRASTRUCTURE SERVICES</span>
+                            </h2>
+                            <p>Amazon Web Services, Microsoft Azure, Google Cloud</p>
+                        </div>
+                        <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9" data-text="06">
+                            <h2>
+                                <span>HYBRID</span>
+                            </h2>
+                            <p>Ionic, React Native, Flutter, Xamarin, Phone Gap, Apache Cordova, Intel® XDK</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9" data-text="07">
+                            <h2>
+                                <span>TESTING & AUTOMATION</span>
+                            </h2>
+                            <p>Docker, Jenkins, Protractor, Selenium, Appium, Seetest Automation</p>
+                        </div>
+                    </div>
+                </section>
                 <!-- Services-points -->
                 <section class="service-points" data-scroll="" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="container text_anim">
