--- a/works.html
+++ b/works.html
@@ -464,7 +464,7 @@ brand partners for the past four years, helping them to achieve the desired resu
                             <div class="text-wrapper" data-scroll="">
                                 <div class="text_anim spline_p h">
                                     <p class="h">
-                                        with our bespoke solutions and proven processes, we elevate brands to captivate
+                                        With our bespoke solutions and proven processes, we elevate brands to captivate
                                         their
                                         audiences.
                                         For the last 4 years, we have developed user-focused sustainable & scalable
