--- a/technology-development.html
+++ b/technology-development.html
@@ -295,7 +295,7 @@ applications." />
                                 </div>
                             </div>
                         </div>
-                        <div class="image-div" data-scroll="" data-scroll-speed="5 ">
+                        <div class="image-div" data-scroll="" data-scroll-speed="5">
                             <figure>
                                 <img src="/assets/resources/img/Service-elements/Strategy-image-1.png" alt="" />
                             </figure>
@@ -373,7 +373,7 @@ applications." />
                     </div>
                 </section>
 
-                <!-- ================= Ipad Mobile =============== -->
+                <!-- ================= Ipad >>>>>>>>>>>> Mobile =============== -->
 
                 <section class="ser-two ipad-ser" data-bgcolor="#000" data-humcolor="#fff">
                     <div class="container" data-scroll="">
