Tablet Responsive Update

--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
 </head>
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
-    <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
 
-    </div>
+    </div> -->
 
     <div class="site-header">
         <div class="header-wrapper">
