Tablet Responsive Update

--- a/strategy.html
+++ b/strategy.html
@@ -206,7 +206,7 @@ business goals." />
                         <h1 class="text-rveal"><span class="header_title_line"><span>
                                     Strategy &
                                 </span></span>
-                            <span class="h1-r header_title_line mr__right"><span>
+                            <span class="h1-r header_title_line mr__right strategy__head"><span>
                                     Planning
                                 </span>
                         </h1>
