--- a/technology-development.html
+++ b/technology-development.html
@@ -201,7 +201,7 @@ applications." />
                         <h1 class="text-rveal tech__dev"><span class="header_title_line"><span>
                                     Technology
                                 </span></span>
-                            <span class="h1-r6 header_title_line"><span>
+                            <span class="h1-r6 header_title_line tech__head"><span>
                                     Development
                                 </span>
                         </h1>
