--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                     </div>
                     <!-- second scroll -->
 
-                    <div class="container_word_change_t m-hide">
+                    <!-- <div class="container_word_change_t m-hide">
                         <div class="container_word_change_t_content">
                             <p class="we">From</p>
                             <p class="make">Concept</p>
@@ -591,7 +591,7 @@
 
                             <p class="wor" data-splitting="">We're Changing The Face of Web</p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- thrid scroll -->
                     <div class="transition_to_lapi m-hide"></div>
                     <div class="container_lapi m-hide">
